fixed nonzero velocity and continued documentation

--- a/Dokumentation/ads/header.tex
+++ b/Dokumentation/ads/header.tex
@@ -197,7 +197,7 @@
 \graphicspath{{images/}}
 
 % Einige häufig verwendete Sprachen
-\lstloadlanguages{PHP,Python,Java,C,C++,bash,XML}
+\lstloadlanguages{PHP,Python,Java,C,C++,bash,XML,Matlab}
 \listingsettings{}
 % Umbennung des Listings
 \renewcommand\lstlistingname{\langlistingname}
