--- a/Dokumentation/einstellungen.tex
+++ b/Dokumentation/einstellungen.tex
@@ -21,7 +21,7 @@
 %% Die meisten der folgenden Daten werden auf dem
 %% Deckblatt angezeigt, einige auch im weiteren Verlauf
 %% des Dokuments.
-\setzemartrikelnr{8540946; XXX}
+\setzemartrikelnr{8540946; 6430174}
 \setzekurs{STG-TINF17-ITA}
 \setzetitel{Documentation Parkassist}
 \setzedatumAbgabe{07.04.2020}
